Api Security implemented.

--- a/Core/TomPIT.Core/Claims.resx
+++ b/Core/TomPIT.Core/Claims.resx
@@ -123,4 +123,7 @@
   <data name="ImplementMicroservice" xml:space="preserve">
     <value>Implement Micro Service</value>
   </data>
+  <data name="Invoke" xml:space="preserve">
+    <value>Invoke</value>
+  </data>
 </root>
