IoT client library refresh

--- a/Core/TomPIT.Core/SR.resx
+++ b/Core/TomPIT.Core/SR.resx
@@ -840,4 +840,7 @@
   <data name="ErrIoTParameterValueExpected" xml:space="preserve">
     <value>IoT transaction parameter value expected</value>
   </data>
+  <data name="ErrIoTStencilNotFound" xml:space="preserve">
+    <value>Stencil not found</value>
+  </data>
 </root>
