String table implemented

--- a/Core/TomPIT.Core/SR.resx
+++ b/Core/TomPIT.Core/SR.resx
@@ -906,4 +906,7 @@
   <data name="ErrNoIoTServer" xml:space="preserve">
     <value>No IoT server is registered. To manage Instances go to the Management console and search for the Environment/Instances node.</value>
   </data>
+  <data name="ErrStringResourceNotFound" xml:space="preserve">
+    <value>String resource not found</value>
+  </data>
 </root>
