Big data initial commit

--- a/Core/TomPIT.Core/SR.resx
+++ b/Core/TomPIT.Core/SR.resx
@@ -915,4 +915,10 @@
   <data name="ErrMediaFolderNotFound" xml:space="preserve">
     <value>Media folder not found</value>
   </data>
+  <data name="ErrBigDataNodeNotFound" xml:space="preserve">
+    <value>Node not found</value>
+  </data>
+  <data name="ErrBigDataPartitionNotFound" xml:space="preserve">
+    <value>Partition not found</value>
+  </data>
 </root>
