--- a/Core/TomPIT.Core/SR.resx
+++ b/Core/TomPIT.Core/SR.resx
@@ -939,4 +939,7 @@
   <data name="MicroserviceNoTemplate" xml:space="preserve">
     <value>No template set</value>
   </data>
+  <data name="ValUnique" xml:space="preserve">
+    <value>Value for the field {0} already exists</value>
+  </data>
 </root>
