--- a/Core/TomPIT.Core/SR.resx
+++ b/Core/TomPIT.Core/SR.resx
@@ -1063,7 +1063,7 @@
     <value>Micro service expected</value>
   </data>
   <data name="ErrCacheKeyNull" xml:space="preserve">
-    <value>Cache Key property not set. Please set 'Key' property before returning value from cache retrieve handler.</value>
+    <value>Cache Key property not set. Please set 'Key' property before returning value from cache retrieve handler or set CacheKeyAttribute on at least one property.</value>
   </data>
   <data name="ErrLine" xml:space="preserve">
     <value>Line</value>
