--- a/Core/TomPIT.Core/SR.resx
+++ b/Core/TomPIT.Core/SR.resx
@@ -1107,4 +1107,7 @@
   <data name="ErrPrintingProviderResolve" xml:space="preserve">
     <value>Cannot resolve printing provider</value>
   </data>
+  <data name="ErrSubscriptionNotFoundForPrimaryKey" xml:space="preserve">
+    <value>Subscription not found for the specified primary key</value>
+  </data>
 </root>
