--- a/BigData/BigData/Providers/Sql/SqlStrings.resx
+++ b/BigData/BigData/Providers/Sql/SqlStrings.resx
@@ -135,11 +135,11 @@
   </data>
   <data name="CreateMergeProcedure" xml:space="preserve">
     <value>CREATE PROCEDURE merge_{0}
-	@rows struct_{0} READONLY
+	@rows nvarchar(max)
 AS
 
 MERGE {0} AS t
-USING (SELECT * FROM @rows) AS s ({1})
+USING (SELECT * FROM OPENJSON(@rows) WITH ({5})) AS s ({1})
 ON ({2})
 	WHEN matched THEN
 		UPDATE SET {3}
@@ -147,18 +147,13 @@ ON ({2})
 		INSERT ({1}) values ({4})
   OUTPUT $action, inserted.*;</value>
   </data>
-  <data name="CreateTableType" xml:space="preserve">
-    <value>CREATE TYPE dbo.struct_{0} AS TABLE 
-({1}
-)</value>
-  </data>
   <data name="CreateUpdateProcedure" xml:space="preserve">
     <value>CREATE PROCEDURE merge_{0}
-	@rows struct_{1} READONLY
+	@rows nvarchar(max)
 AS
 
 MERGE {1} AS t
-USING (SELECT * FROM @rows) AS s ({2})
+USING (SELECT * FROM OPENJSON(@rows) WITH ({5})) AS s ({2})
 ON ({3})
 	WHEN matched THEN
 		UPDATE SET {4}
@@ -175,10 +170,6 @@ DROP PROCEDURE merge_{0}</value>
   <data name="DropProcedureUpdate" xml:space="preserve">
     <value>IF EXISTS ( SELECT  * FROM    sys.objects WHERE   object_id = OBJECT_ID(N'merge_{0}') AND type IN (N'P', N'PC')) 
 DROP PROCEDURE merge_{0}</value>
-  </data>
-  <data name="DropStruct" xml:space="preserve">
-    <value>IF EXISTS (SELECT * FROM sys.types WHERE is_table_type = 1 AND name = 'struct_{0}')
- DROP TYPE struct_{0}</value>
   </data>
   <data name="DropTable" xml:space="preserve">
     <value>IF EXISTS (SELECT * FROM sys.objects WHERE object_id = OBJECT_ID(N'{0}') AND type IN (N'U')) 
