Model Views implemented.

--- a/Core/TomPIT.Core/SR.resx
+++ b/Core/TomPIT.Core/SR.resx
@@ -1227,4 +1227,7 @@
   <data name="ErrLockFail" xml:space="preserve">
     <value>Cannot obtain lock</value>
   </data>
+  <data name="ErrCannotResolveViewName" xml:space="preserve">
+    <value>Cannot resolve view name</value>
+  </data>
 </root>
