User securityCode iintroduced

--- a/Core/TomPIT.Core/SR.resx
+++ b/Core/TomPIT.Core/SR.resx
@@ -1239,4 +1239,7 @@
   <data name="ErrContentTypeNotSupported" xml:space="preserve">
     <value>Content type not supported</value>
   </data>
+  <data name="ValSecurityCodeExists" xml:space="preserve">
+    <value>Security code already exists</value>
+  </data>
 </root>
