Disable user deletion

--- a/Core/TomPIT.Core/SR.resx
+++ b/Core/TomPIT.Core/SR.resx
@@ -1287,4 +1287,7 @@
   <data name="UniqueAttribute" xml:space="preserve">
     <value />
   </data>
+  <data name="ErrUserDeleteUnsupported" xml:space="preserve">
+    <value>Users can not be deleted, action deprecated.</value>
+  </data>
 </root>
